# coreclr-module

./: .gitignore  .gitmodules  .travis.yml  CODEOWNERS  Doc.Dockerfile  Dockerfile  Dockerfile.dev  Dockerfile.server  DockerfileCompile  DockerfileCoreRT  DockerfileExecutable  LICENSE  README.md  SECURITY.md  build-exec-corert-image.sh  build-exec-executable-image.sh  build-image-dev.sh  docker-compose.yml  download_dotnet.ps1  index.html  manifest.json  releaseDocs.sh  resource-corert.cfg  resource.cfg  run-executable-image.sh  run-image.sh  setup-pages.sh  start.sh  startgdb.sh  xrefmap.yml
.github/: CODEOWNERS
api/: AltV.Net.Alt.html  AltV.Net.Async.AltAsync.html  AltV.Net.Async.AsyncBaseBaseObjectPool.html  AltV.Net.Async.AsyncBaseObjectPool-1.html  AltV.Net.Async.AsyncEntityPool-1.html  AltV.Net.Async.AsyncEvent.html  AltV.Net.Async.AsyncModule.html  AltV.Net.Async.AsyncResource.html  AltV.Net.Async.ChannelTickSchedulerFactory.html  AltV.Net.Async.DefaultTickSchedulerFactory.html  AltV.Net.Async.Elements.Entities.VehicleBuilder.html  AltV.Net.Async.Elements.Entities.html  AltV.Net.Async.Elements.Pools.AsyncBlipPool.html  AltV.Net.Async.Elements.Pools.AsyncCheckpointPool.html  AltV.Net.Async.Elements.Pools.AsyncColShapePool.html  AltV.Net.Async.Elements.Pools.AsyncPlayerPool.html  AltV.Net.Async.Elements.Pools.AsyncVehiclePool.html  AltV.Net.Async.Elements.Pools.AsyncVoiceChannelPool.html  AltV.Net.Async.Elements.Pools.html  AltV.Net.Async.Events.CheckpointAsyncDelegate.html  AltV.Net.Async.Events.ClientEventAsyncDelegate.html  AltV.Net.Async.Events.ColShapeAsyncDelegate.html  AltV.Net.Async.Events.ConsoleCommandAsyncDelegate.html  AltV.Net.Async.Events.MetaDataChangeAsyncDelegate.html  AltV.Net.Async.Events.PlayerChangeVehicleSeatAsyncDelegate.html  AltV.Net.Async.Events.PlayerClientEventAsyncDelegate.html  AltV.Net.Async.Events.PlayerConnectAsyncDelegate.html  AltV.Net.Async.Events.PlayerDamageAsyncDelegate.html  AltV.Net.Async.Events.PlayerDeadAsyncDelegate.html  AltV.Net.Async.Events.PlayerDisconnectAsyncDelegate.html  AltV.Net.Async.Events.PlayerEnterVehicleAsyncDelegate.html  AltV.Net.Async.Events.PlayerLeaveVehicleAsyncDelegate.html  AltV.Net.Async.Events.PlayerRemoveAsyncDelegate.html  AltV.Net.Async.Events.ServerEventAsyncDelegate.html  AltV.Net.Async.Events.VehicleRemoveAsyncDelegate.html  AltV.Net.Async.Events.html  AltV.Net.Async.ITickSchedulerFactory.html  AltV.Net.Async.IVehicleBuilder.html  (+291 more)
clrhost/: CMakeLists.txt  windows-gen-project.bat
clrhost/include/: CSharpResource.h  CSharpScriptRuntime.h  CoreClr.h  clrHost.h  dirent_win.h
clrhost/src/: CMakeLists.txt  CSharpResource.cpp  CSharpScriptRuntime.cpp  CoreClr.cpp  altv.cpp  clrHost.cpp
clrhost/src/altv-c-api/: altv.cpp  altv.h  array.cpp  array.h  baseobject.cpp  baseobject.h  blip.cpp  blip.h  checkpoint.cpp  checkpoint.h  entity.cpp  entity.h  eventcallbacks.cpp  eventcallbacks.h  events.cpp  events.h  function.cpp  function.h  mvalue.cpp  mvalue.h  player.cpp  player.h  resource.cpp  resource.h  rotation.h  server.cpp  server.h  vehicle.cpp  vehicle.h  voice_channel.h
runtime/: CMakeLists.txt  linux-build.sh
runtime/c-api/: CMakeLists.txt  altv.cpp  altv.h  blip.cpp  blip.h  checkpoint.cpp  checkpoint.h  colshape.h  connection_info.cpp  connection_info.h  core.cpp  core.h  event.cpp  event.h  function.cpp  function.h  localstorage.cpp  localstorage.h  map_data.cpp  map_data.h  mvalue.cpp  mvalue.h  resource.cpp  resource.h  server.cpp  server.h  voice_channel.h
runtime/c-api/data/: discord_user.h  dlc_cloth.h  dlc_prop.h  head_blend_data.h  head_overlay.h  invoker.h  types.h  vehicle_model_info.h
runtime/c-api/entities/: audio.cpp  audio.h  baseObject.cpp  baseObject.h  blip.cpp  blip.h  checkpoint.cpp  checkpoint.h  colshape.cpp  colshape.h  entity.cpp  entity.h  http_client.cpp  http_client.h  map_data.cpp  player.cpp  player.h  rml_document.cpp  rml_document.h  rml_element.cpp  rml_element.h  vehicle.cpp  vehicle.h  voice_channel.cpp  voice_channel.h  websocket_client.cpp  websocket_client.h  webview.cpp  webview.h  worldObject.cpp  worldObject.h
runtime/c-api/utils/: export.h  strings.cpp  strings.h
runtime/c-api/version/: get-version.bat  get-version.sh  version.h
runtime/client/: .clang-format  CMakeLists.txt  build.bat
runtime/client/src/: main.cpp  types.h  utils.h
runtime/client/src/c-api/: client.h  entities.cpp  entities.h  events.cpp  events.h  memory.cpp  memory.h  mvalue.cpp  mvalue.h  resource.cpp  resource.h  shared.cpp  shared.h
runtime/client/src/c-api/entities/: baseObject.cpp  baseObject.h  entity.cpp  entity.h  player.cpp  player.h  vehicle.cpp  vehicle.h  worldObject.cpp  worldObject.h
runtime/client/src/coreclr/: CoreCLR.cpp  CoreCLR.h  CoreCLRUtils.cpp  CoreClr.cpp  CoreClr.h  CoreClrUtils.cpp  CoreClrValidation.cpp
runtime/client/src/exceptions/: LoadException.h
runtime/client/src/nuget/: NuGet.cpp  NuGet.h
runtime/client/src/runtime/: CSharpResourceImpl.cpp  CSharpResourceImpl.h  CSharpScriptRuntime.cpp  CSharpScriptRuntime.h  eventDelegates.h  natives.cpp  natives.h
runtime/include/: CSharpResource.h  CSharpResourceImpl.h  CSharpScriptRuntime.h  CoreClr.h  altv.h  semver.h
runtime/server/: CMakeLists.txt  windows-build.sh  windowscross.cmake
runtime/server/include/: CSharpResourceImpl.h  CSharpScriptRuntime.h  CoreClr.h
runtime/server/src/: CMakeLists.txt  CSharpResourceImpl.cpp  CoreClr.cpp  altv.cpp
runtime/src/: CMakeLists.txt  CSharpResource.cpp  CSharpResourceImpl.cpp  CSharpScriptRuntime.cpp  CoreClr.cpp  altv.cpp
runtime/src/altv-c-api/: altv.cpp  altv.h  baseobject.cpp  baseobject.h  blip.cpp  blip.h  checkpoint.cpp  checkpoint.h  cloth.h  colshape.cpp  colshape.h  connection_info.cpp  connection_info.h  entity.cpp  entity.h  event.cpp  event.h  function.cpp  function.h  mvalue.cpp  mvalue.h  player.cpp  player.h  position.h  prop.h  resource.cpp  resource.h  rgba.h  server.cpp  server.h  strings.cpp  vector2.h  vector3.h  vehicle.cpp  vehicle.h  vehicle_model_info.h  voice_channel.cpp  voice_channel.h  weapon.h
(+1658 files in other folders)
